--- a/labs/lab1/pom.xml
+++ b/labs/lab1/pom.xml
@@ -50,10 +50,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-stream-rabbit</artifactId>
 		</dependency>
-		<!--<dependency>
+	    <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>-->
+	    </dependency>
 		<!-- The "spring-cloud-stream-test-support" dependency is
 		required only for integration tests; DO NOT include it in the
 		application. If included, it will take precedence and the rabbit
