updated lab1 for local mode http instead of https

--- a/labs/lab1/src/main/resources/application.properties
+++ b/labs/lab1/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=lab1-stream
-management.security.enabled=false
+management.endpoints.web.exposure.include=*  
 spring.cloud.stream.bindings.input.destination=streamlabdest1
 spring.cloud.stream.bindings.output.destination=streamlabdest2
 server.port=9002
+spring.security.user.name=user # Default user name.
+spring.security.user.password=password # Password for the default user name.
+spring.security.user.roles= # Granted roles for the default user name.
